refactor: reorganiza estrutura para múltiplos projetos Java
Co-authored-by: eduardosyw <230004608+eduardosyw@users.noreply.github.com>