@@ -1,24 +1,12 @@
-# Calculadora de IMC
+# Projetos Básicos Java
 
-Aplicação desktop simples com interface gráfica (JavaFX) para calcular o Índice de Massa Corporal (IMC).
+Repositório com projetos simples desenvolvidos durante meus estudos de Java.
+Cada pasta contém um projeto independente, com seu próprio README explicando o que faz e como rodar.
 
-## Funcionalidades
+## Projetos
 
-- Entrada de peso (kg) e altura (m)
-- Cálculo do IMC
-- Classificação: abaixo do peso, peso normal, sobrepeso ou obesidade
-- Validação de campos (números inválidos ou valores negativos)
+| Projeto | Descrição |
+|---|---|
+| [calculadora-imc](./calculadora-imc/) | Calculadora de IMC com interface gráfica (JavaFX) |
 
-## Como rodar
-
-Pré-requisitos: Java JDK e JavaFX SDK configurados.
-
-```bash
-javac --module-path /caminho/para/javafx-sdk/lib --add-modules javafx.controls ProjetoCalculadoraIMC.java
-java --module-path /caminho/para/javafx-sdk/lib --add-modules javafx.controls ProjetoCalculadoraIMC
-```
-
-## Tecnologias
-
-- Java
-- JavaFX
+> Este repositório será atualizado conforme eu for concluindo novos projetos do curso.
